glide (2002.04.10ds1-12) UNRELEASED; urgency=low

  * Switch debian/copyright to machine-readable format 1.0.
  * Switch Vcs-Browser to a cgit URL.

 -- Guillem Jover <guillem@debian.org>  Sat, 02 May 2015 06:15:26 +0200

glide (2002.04.10ds1-11) unstable; urgency=low

  * Debconf template translations:
    - Update Dutch (Frans Spiesschaert). (Closes: #764097)
  * Use the build tree libtool instead of the system one, as the libtool binary
    was moved from the libtool package to libtool-bin. (Closes: #769263)
  * Now using Standards-Version 3.9.6 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Wed, 12 Nov 2014 20:56:09 +0100

glide (2002.04.10ds1-10) unstable; urgency=low

  * Debconf template translations:
    - Add Slovak (Ivan Masár). (Closes: #709110)
    - Update French (Steve Petruzzello). (Closes: #709308)
    - Update German (Helge Kreutzmann). (Closes: #717585)
    - Update Italian (Luca Monducci). (Closes: #720070)
    - Update Japanese (victory). (Closes: #709072)
    - Update Polish (Michał Kułach). (Closes: #712489)
    - Update Swedish (Martin Bagge). (Closes: #712653)
  * Now using Standards-Version 3.9.5 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Sun, 10 Aug 2014 01:59:52 +0200

glide (2002.04.10ds1-9) unstable; urgency=low

  * Remove package creation and maintainers history from debian/copyright.
  * Ignore error from db_unregister in case the template does not exist.
    (Closes: #708341)
  * Remove useless debian/BUGS file, these are tracked in the BTS.
  * Pass CPPFLAGS, CFLAGS and LDFLAGS to upstream build system.
  * Fix format string errors.
  * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS.
  * Use debhelper compatibility level 9.
  * Debconf template translations:
    - Update Danish (Joe Dalton). (Closes: #708896)
    - Update Galician (Jorge Barreiro). (Closes: #708875)
    - Update Portuguese (Américo Monteiro). (Closes: #708736)
    - Update Russian (Sergey Alyoshin). (Closes: #708440)
