@@ -2,6 +2,7 @@ glide (2002.04.10ds1-12) UNRELEASED; urgency=low
 
   * Switch debian/copyright to machine-readable format 1.0.
   * Switch Vcs-Browser to a cgit URL.
+  * Use dpkg-shlibdeps -l option instead of deprecated LD_LIBRARY_PATH.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 02 May 2015 06:15:26 +0200
 
